<resources>
    <string name="app_name">FoodDe</string>
    <string name="login_password">Password</string>
    <string name="login_phone_number">Phone Number</string>
    <string name="log_in">Log in</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_min_6_characters">Password (Min. 6 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="phone_number_10_digits">Phone Number (10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="name_min_4_characters">Name (Min. 4 characters)</string>
    <string name="register_now">Register Now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_registered_phone_number_and_email_address">Enter your Registered phone number and email address :</string>
    <string name="email_address_forgot">Email Address</string>
    <string name="phone_number_10_digits_forgot">Phone Number (10 digits)</string>
    <string name="next_forgot">Next</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="_91_9944001122">+91 9944001122</string>
    <string name="guest">Guest</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="Rs">\u20B9</string>
    <string name="_200_person">200/person</string>
    <string name="_4_5">4.5</string>
    <string name="person">/person</string>
    <string name="_200">200</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="no">No.</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="rs">Rs.</string>
    <string name="add">Add</string>
    <string name="list_below">Choose from menu listed below:</string>
    <string name="registered_preference">Register Preference</string>
    <string name="enter_the_recieved_otp_below">Enter the recieved OTP below:</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="_300">300</string>
    <string name="hotel">Hotel</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="place_order_total_rs_110">Place Order(Total: Rs.110)</string>
    <string name="A_2">A.2 Normally it takes about 25 minutes. It depends on delivery point and delivery partners.</string>
    <string name="Q_2">Q.2 How much time will it take to deliver?</string>
    <string name="A_1">A.1 Food will be delivered by delivery partners with their mode of vehicle mostly bikes.</string>
    <string name="Q_1">Q.1 How will the food be delivered?</string>
    <string name="A_3">A.3 Yes. It depends on distance. It is calculated at the time of delivery.</string>
    <string name="Q_3">Q.3 Is there any delivery charges?</string>
    <string name="Q_4">Q.4 Can I cancel my order?</string>
    <string name="A_4">A.4 No. You can\'t cancel placed orders. We are in the initial stage of this venture. So we are trying to implement order cancel and refund programs.</string>
    <string name="Q_5">Q.5 Can I change my address at the time of delivery?</string>
    <string name="A_5">A.5 No. But we will be introducing more features in the future.</string>
    <string name="foodde">FoodDe</string>
    <string name="placed_order">Your order has been successfully placed!</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="date_and_time">Date and Time</string>

</resources>
