<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:weightSum="7">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtItemNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/item_name"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtItemName"
            android:text="@string/rs" />

        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtItemName"
            android:layout_toEndOf="@+id/txtRs"
            android:text="@string/price" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_weight="2"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="20sp" />

</LinearLayout>