<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ForgotActivity">

    <TextView
        android:id="@+id/txtEnterOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="60dp"
        android:padding="4dp"
        android:text="@string/enter_the_recieved_otp_below"
        android:textColor="#e0f7fa"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etOTPForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterOTP"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="#ffff"
        android:hint="@string/otp_4_characters"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etPasswordForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOTPForgot"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:background="#ffff"
        android:hint="@string/new_password_min_4_characters"
        android:inputType="textPassword"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etConfirmForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordForgot"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:background="#ffff"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnSubmitForgot"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textColor="#ffff"
        android:textSize="17sp" />


</RelativeLayout>