<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ForgotActivity">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/txtEnterDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgIcon"
        android:layout_marginHorizontal="30dp"
        android:padding="4dp"
        android:text="@string/enter_your_registered_phone_number_and_email_address"
        android:textColor="#e0f7fa"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etPhoneNumberForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterDetails"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/phone_number_10_digits_forgot"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etEmailForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhoneNumberForgot"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_register_email"
        android:hint="@string/email_address_forgot"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnForgotNext"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next_forgot"
        android:textColor="#ffff"
        android:textSize="17sp" />


</RelativeLayout>