<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="horizontal"
    android:weightSum="7">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".8">

        <View
            android:id="@+id/vLine"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="12dp"
            android:background="@color/colorPrimary" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txtHistoryItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_weight="4.1"
        android:text="@string/item_name"
        android:textColor="#000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:layout_weight="2.1">

        <TextView
            android:id="@+id/txtRsHistory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:text="@string/Rs"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtHistoryCost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/txtRsHistory"
            android:text="@string/_300"
            android:textColor="#000"
            android:textSize="20sp" />
    </RelativeLayout>


</LinearLayout>