<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_register_name" />

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgProfileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtProfilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtProfileName"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/txtProfileMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtProfilePhone"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/txtProfileAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtProfileMail"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:text="@string/delivery_address"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="23sp" />


</RelativeLayout>